# kodegen-claude-agent

./: Cargo.toml  README.md
examples/: claude_agent_demo.rs
examples/common/: mod.rs
src/: error.rs  lib.rs  main.rs  query.rs  registry.rs
src/client/: client_impl.rs  mod.rs  tasks.rs
src/control/: mod.rs
src/control/protocol/: capabilities.rs  handler.rs  messages.rs  mod.rs
src/hooks/: mod.rs
src/manager/: agent_manager.rs  background.rs  commands.rs  helpers.rs  mod.rs  session.rs
src/manager/agent_manager/: core.rs  info.rs  interaction.rs  list.rs  mod.rs  output.rs  pagination.rs  spawn.rs
src/message/: parser.rs
src/permissions/: mod.rs
src/tools/: claude_agent.rs  list_claude_agents.rs  mod.rs  read_claude_agent_output.rs  send_claude_agent_prompt.rs  spawn_claude_agent.rs  terminate_claude_agent_session.rs
src/transport/: mod.rs
src/transport/subprocess/: command.rs  config.rs  lifecycle.rs  mod.rs  reader.rs  transport.rs
src/types/: agent.rs  hooks.rs  identifiers.rs  mcp.rs  messages.rs  mod.rs  options.rs  permissions.rs  prompt_input.rs
tests/: client_tests.rs  control_protocol_tests.rs  control_tests.rs  hooks_tests.rs  message_tests.rs  permissions_tests.rs  test_query.rs  transport_tests.rs
tests/client/: mod.rs  test_client.rs
tests/control/: mod.rs  test_protocol.rs
tests/hooks/: mod.rs  test_hooks.rs
tests/message/: mod.rs  test_parser.rs
tests/permissions/: mod.rs  test_permissions.rs
tests/transport/: mod.rs  test_subprocess.rs
